<resources>
    <string name="app_name">567Reader</string>
    <string name="app_name_a">567Reader·A</string>
    <string name="app_name_s" translatable="false">567ReaderPlus</string>
    <string name="receiving_shared_label">Legado·search</string>
    <string name="tip_perm_request_storage">Legado needs storage access to find and read books. please go "App Settings" to allow "Storage permission".</string>
    <string name="menu_backup">Home</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_import_old">Import Legado data</string>
    <string name="webdav_cache_backup">Offline cache book backup</string>
    <string name="webdav_cache_backup_s">Export to local and back up to the exports directory under the legado folder</string>
    <string name="backup_path">Backup to</string>
    <string name="select_backup_path">Please select a backup path.</string>
    <string name="menu_import_old_version">Import legacy data</string>
    <string name="menu_import_github">Import github data</string>
    <string name="menu_replace_rule">Replacement</string>
    <string name="menu_send">Send</string>
    <string name="dialog_title">Prompt</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_setting">Go to Settings</string>
    <string name="tip_cannot_jump_setting_page">Cannot jump to Settings.</string>
    <string name="manual_input">Manual Input</string>
    <string name="enter_directory_path">Enter directory path</string>
    <string name="invalid_directory">Invalid directory path</string>
    <string name="empty_directory_input">Directory path cannot be empty</string>
    <string name="dynamic_click_retry">Retry</string>
    <string name="dynamic_loading">Loading</string>
    <string name="draw">Warning</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_select_group">Delete Select Group</string>
    <string name="delete_all">Delete all</string>
    <string name="custom_export_section">Custom export chapter of epub</string>
    <string name="replace">Replace</string>
    <string name="replace_purify">Replacement</string>
    <string name="replace_purify_desc">Configure replacement rules</string>
    <string name="not_available">Not available now</string>
    <string name="enable">Enable</string>
    <string name="replace_purify_search">Search Replacement</string>
    <string name="bookshelf">Bookshelf</string>
    <string name="favorites">Favorites</string>
    <string name="favorite">Favorite</string>
    <string name="in_favorites">in Favorites</string>
    <string name="out_favorites">Not in Favorites</string>
    <string name="rss">RSS feeds</string>
    <string name="all">All</string>
    <string name="recent_reading">Recent reading</string>
    <string name="last_read">Last reading</string>
    <string name="update_log">What\'s new</string>
    <string name="bookshelf_empty">The bookshelf is still empty. Search for books or add them from discovery!</string>
    <string name="action_search">Search</string>
    <string name="action_download">Download</string>
    <string name="layout_list">List</string>
    <string name="layout_grid2">Grid-2</string>
    <string name="layout_grid3">Grid-3</string>
    <string name="layout_grid4">Grid-4</string>
    <string name="layout_grid5">Grid-5</string>
    <string name="layout_grid6">Grid-6</string>
    <string name="bookshelf_layout">Layout</string>
    <string name="view">View</string>
    <string name="book_library">Library</string>
    <string name="book_local">Import books</string>
    <string name="book_source">Book sources</string>
    <string name="book_source_manage">Sources management</string>
    <string name="book_source_manage_desc">Create/Import/Edit/Manage Book sources</string>
    <string name="setting">Settings</string>
    <string name="theme_setting">Theme settings</string>
    <string name="theme_setting_s">Some settings related to interface or color</string>
    <string name="other_setting">Other settings</string>
    <string name="other_setting_s">Some function-related settings</string>
    <string name="about">About</string>
    <string name="donate">Donations</string>
    <string name="exit">Exit</string>
    <string name="exit_no_save">It has not been saved. Do you want to continue editing?</string>
    <string name="read_style">Book styles</string>
    <string name="version">Version</string>
    <string name="local">Local</string>
    <string name="search">Search</string>
    <string name="origin_format">Origin: %s</string>
    <string name="read_dur_progress">Origin: %s</string>
    <string name="book_name">Title</string>
    <string name="lasted_show">Latest: %s</string>
    <string name="check_add_bookshelf">Would you like to add %s to your Bookshelf?</string>
    <string name="import_books_count">%s text file(s) in total</string>
    <string name="is_loading">Loading…</string>
    <string name="retry">Retry</string>
    <string name="web_service">Web service</string>
    <string name="web_service_desc">Web edit source and read book</string>
    <string name="web_edit_source">Edit book sources on the web</string>
    <string name="offline_cache">Offline cache</string>
    <string name="offline_cache_t">Offline cache</string>
    <string name="offline_cache_s">cache the selected chapter(s) to Storage</string>
    <string name="change_origin">Change Origin</string>
    <string name="about_description">
        \u3000\u3000 This is an open source reading software newly developed by Kotlin, welcome to join us.
    </string>
    <string name="app_share_description">
        Legado (YueDu 3.0) download link：\n https://github.com/gedoor/legado/releases
    </string>
    <string name="version_name">Version %s</string>
    <string name="pt_background_verification">Background-verification</string>
    <string name="ps_background_verification">you can operate freely when verifying the book source</string>
    <string name="pt_auto_refresh">Auto-refresh</string>
    <string name="ps_auto_refresh">Update books automatically when opening the software</string>
    <string name="pt_auto_download">Auto-download</string>
    <string name="backup_restore">Backup and restore</string>
    <string name="web_dav_set">WebDav settings</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="volume_key_page">Volume keys to turn page</string>
    <string name="mouse_wheel_page">Mouse wheel to turn page</string>
    <string name="change_icon">Change icon</string>
    <string name="bookshelf_px_0">By recent list</string>
    <string name="bookshelf_px_1">By update time</string>
    <string name="bookshelf_px_2">By book title</string>
    <string name="bookshelf_px_3">By sort manually</string>
    <string name="immersion_status_bar">Immersive status bar</string>
    <string name="volume_key_page_on_play">Volume keys to turn page when reading</string>
    <string name="txt_toc_rule">Txt Catalog Rule</string>
    <string name="sort">Sort</string>
    <string name="status_bar_immersion">The status bar color becomes transparent</string>
    <string name="imm_navigation_bar">immersion navigation bar</string>
    <string name="imm_navigation_bar_s">The navigation bar becomes transparent</string>
    <string name="change_icon_summary">Switch the software icon displayed on the desktop</string>
    <string name="web_dav_pw">WebDav password</string>
    <string name="web_dav_pw_s">Input you WebDav authorized password</string>
    <string name="web_dav_url_s">Input you server address</string>
    <string name="web_dav_url">WebDav server address</string>
    <string name="web_dav_account">WebDav account</string>
    <string name="web_dav_account_s">Input your WebDav account</string>
    <string name="custom_page_key">Set page-turning buttons</string>
    <string name="selectText">Long Tap to select text</string>
    <string name="name">Name</string>
    <string name="regex">Regex</string>
    <string name="example">Example</string>
    <string name="bar_elevation">Navigation bar shadow</string>
    <string name="bar_elevation_s">Current shadow size(elevation): %s</string>
    <string name="disable_return_key">Disable return key</string>
    <string name="auto_change_source">Change source automatically</string>
    <string name="text_full_justify">Text justified</string>
    <string name="text_bottom_justify">Text align bottom</string>
    <string name="backup_summary">Backup the local and WebDav simultaneously</string>
    <string name="restore_summary">Restore from WebDAV first, Restore form the local backup on long click</string>
    <string name="restore_ignore">Bypass list</string>
    <string name="restore_ignore_summary">Ignore some contents while restoring</string>
    <string name="show_brightness_view">Show brightness widget</string>
    <string name="click_regional_config">Screen touch control</string>
    <string name="sync_book_progress_t">Synchronous reading progress</string>
    <string name="sync_book_progress_s">Synchronize reading progress when entering / exiting the reading interface</string>
    <string name="sync_book_progress_plus_t">Sync Enhancement</string>
    <string name="sync_book_progress_plus_s">Sync cloud progress when re-entering the page (screen off, returning from background, etc.) or when the network becomes available. You will be prompted before syncing new progress.</string>
    <string name="use_zh_layout">Custom Chinese line feed</string>
    <string name="show_unread">Show unread flag</string>
    <string name="cover_config">cover config</string>
    <string name="cover_config_summary">Generic Cover Rules and Default Cover Style</string>
    <string name="double_page_horizontal">Tablet/Landscape Dual Page</string>
    <string name="font_scale">font scale</string>
    <string name="font_scale_summary">font scale:%.1f</string>
    <string name="expand_text_menu">Expand text selection menu</string>
    <string name="sub_dir">Sub dir</string>
    <string name="welcome_style">Launch interface style</string>
    <string name="welcome_style_summary">Startup screen image and whether to display text, etc.</string>
    <string name="page_touch_slop_title">Sliding Page Threshold</string>
    <string name="page_touch_slop_summary">How far to slide to trigger a page slide (system default %s px)</string>
    <string name="page_touch_click_title">边缘点击阈值</string>
    <string name="page_touch_click_summary">左右边缘多少距离不会触发点击事件，默认为0px</string>
    <string name="show_read_title_addition">show read title addition area</string>
    <string name="read_bar_style_follow_page">read bar style follow page</string>
    <string name="progress_bar_behavior">Progress bar behavior</string>
    <string name="no_anim_scroll_page">Disable scroll click animation</string>
    <string name="webdav_device_name">Device name</string>
    <string name="show_last_update_time">Show last updated time</string>
    <string name="only_latest_backup_t">Keep only the latest backup</string>
    <string name="only_latest_backup_s">Local backup keeps only the latest backup file</string>
    <string name="show_wait_up_count">Display the number of pending updates</string>
    <string name="bookshelf_px_4">Comprehensive</string>
    <string name="bookshelf_px_5">Sort by author</string>
    <string name="show_bookshelf_fast_scroller">Show quick scroll bar</string>
    <string name="key_page_on_long_press">Press and hold the key to turn the page</string>
    <string name="enable_optimize_render">启用绘制优化</string>
    <string name="replace_to_js">js处理</string>
    <string name="adapt_special_style">适配特殊样式</string>
    <string name="auto_check_new_backup_t">自动检查新备份</string>
    <string name="auto_check_new_backup_s">打开软件时检查是否有新备份，有新备份时提示是否更新</string>
    <string name="click_image_way">点击图片方式</string>
</resources>