<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.qreader.reader.lib.prefs.IconListPreference
        android:defaultValue="ic_launcher"
        android:entries="@array/icon_names"
        android:entryValues="@array/icons"
        android:key="launcherIcon"
        android:summary="@string/change_icon_summary"
        android:title="@string/change_icon"
        app:iconSpaceReserved="false"
        app:icons="@array/icons" />

    <com.qreader.reader.lib.prefs.Preference
        android:key="welcomeStyle"
        android:title="@string/welcome_style"
        android:summary="@string/welcome_style_summary" />

    <com.qreader.reader.lib.prefs.SwitchPreference
        android:defaultValue="true"
        android:key="transparentStatusBar"
        android:summary="@string/status_bar_immersion"
        android:title="@string/immersion_status_bar"
        app:iconSpaceReserved="false" />

    <com.qreader.reader.lib.prefs.SwitchPreference
        android:defaultValue="true"
        android:key="immNavigationBar"
        android:summary="@string/imm_navigation_bar_s"
        android:title="@string/imm_navigation_bar"
        app:iconSpaceReserved="false" />

    <com.qreader.reader.lib.prefs.Preference
        android:key="barElevation"
        android:summary="@string/bar_elevation_s"
        android:title="@string/bar_elevation"
        app:iconSpaceReserved="false" />

    <com.qreader.reader.lib.prefs.Preference
        android:key="fontScale"
        android:summary="@string/font_scale_summary"
        android:title="@string/font_scale"
        app:iconSpaceReserved="false" />

    <com.qreader.reader.lib.prefs.Preference
        android:key="coverConfig"
        android:title="@string/cover_config"
        android:summary="@string/cover_config_summary"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false" />

</androidx.preference.PreferenceScreen>
