<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.qreader.reader.lib.prefs.NameListPreference
        android:defaultValue="0"
        android:entries="@array/double_page_title"
        android:entryValues="@array/double_page_value"
        android:key="doubleHorizontalPage"
        android:title="@string/double_page_horizontal"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <com.qreader.reader.lib.prefs.NameListPreference
        android:defaultValue="page"
        android:entries="@array/progress_bar_behavior_title"
        android:entryValues="@array/progress_bar_behavior_value"
        android:key="progressBarBehavior"
        android:title="@string/progress_bar_behavior"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <com.qreader.reader.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:key="useZhLayout"
        android:title="@string/use_zh_layout"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <com.qreader.reader.lib.prefs.SwitchPreference
        android:defaultValue="true"
        android:key="textFullJustify"
        android:title="@string/text_full_justify"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <com.qreader.reader.lib.prefs.SwitchPreference
        android:defaultValue="true"
        android:key="textBottomJustify"
        android:title="@string/text_bottom_justify"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <com.qreader.reader.lib.prefs.SwitchPreference
        android:defaultValue="true"
        android:key="adaptSpecialStyle"
        android:title="@string/adapt_special_style"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <com.qreader.reader.lib.prefs.SwitchPreference
        android:defaultValue="true"
        android:key="mouseWheelPage"
        android:title="@string/mouse_wheel_page"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <com.qreader.reader.lib.prefs.SwitchPreference
        android:defaultValue="true"
        android:key="volumeKeyPage"
        android:title="@string/volume_key_page"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <com.qreader.reader.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:key="volumeKeyPageOnPlay"
        android:title="@string/volume_key_page_on_play"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <com.qreader.reader.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:key="keyPageOnLongPress"
        android:title="@string/key_page_on_long_press"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <com.qreader.reader.lib.prefs.Preference
        android:key="pageTouchSlop"
        android:summary="@string/page_touch_slop_summary"
        android:title="@string/page_touch_slop_title"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <com.qreader.reader.lib.prefs.Preference
        android:key="pageTouchClick"
        android:summary="@string/page_touch_click_summary"
        android:title="@string/page_touch_click_title"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <com.qreader.reader.lib.prefs.SwitchPreference
        android:defaultValue="true"
        android:key="autoChangeSource"
        android:title="@string/auto_change_source"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <com.qreader.reader.lib.prefs.SwitchPreference
        android:defaultValue="true"
        android:key="selectText"
        android:title="@string/selectText"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <com.qreader.reader.lib.prefs.SwitchPreference
        android:defaultValue="true"
        android:key="showBrightnessView"
        android:title="@string/show_brightness_view"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <com.qreader.reader.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:key="noAnimScrollPage"
        android:title="@string/no_anim_scroll_page"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <com.qreader.reader.lib.prefs.NameListPreference
        android:defaultValue="0"
        android:entries="@array/click_image_way_title"
        android:entryValues="@array/click_image_way_value"
        android:key="clickImgWay"
        android:title="@string/click_image_way"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <com.qreader.reader.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:key="optimizeRender"
        android:title="@string/enable_optimize_render"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <com.qreader.reader.lib.prefs.Preference
        android:key="clickRegionalConfig"
        android:title="@string/click_regional_config"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <com.qreader.reader.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:key="disableReturnKey"
        android:title="@string/disable_return_key"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <com.qreader.reader.lib.prefs.Preference
        android:key="customPageKey"
        android:title="@string/custom_page_key"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <com.qreader.reader.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:key="expandTextMenu"
        android:title="@string/expand_text_menu"
        app:iconSpaceReserved="false"
        app:isBottomBackground="true" />

    <com.qreader.reader.lib.prefs.SwitchPreference
        android:defaultValue="true"
        android:key="showReadTitleAddition"
        android:title="@string/show_read_title_addition" />

    <com.qreader.reader.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:key="readBarStyleFollowPage"
        android:title="@string/read_bar_style_follow_page" />
</androidx.preference.PreferenceScreen>