<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">


        <com.qreader.reader.lib.theme.view.ThemeSwitch
            android:id="@+id/sw_show_unread"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/show_unread"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <com.qreader.reader.lib.theme.view.ThemeSwitch
            android:id="@+id/sw_show_last_update_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/show_last_update_time"
            app:layout_constraintTop_toBottomOf="@+id/sw_show_unread"
            tools:ignore="TouchTargetSizeCheck" />

        <com.qreader.reader.lib.theme.view.ThemeSwitch
            android:id="@+id/sw_show_wait_up_books"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/show_wait_up_count"
            app:layout_constraintTop_toBottomOf="@+id/sw_show_last_update_time"
            tools:ignore="TouchTargetSizeCheck" />

        <com.qreader.reader.lib.theme.view.ThemeSwitch
            android:id="@+id/sw_show_bookshelf_fast_scroller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/show_bookshelf_fast_scroller"
            app:layout_constraintTop_toBottomOf="@+id/sw_show_wait_up_books"
            tools:ignore="TouchTargetSizeCheck" />

        <LinearLayout
            android:id="@+id/ll_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/ll_sort"
            app:layout_constraintTop_toBottomOf="@+id/sw_show_bookshelf_fast_scroller">

            <com.qreader.reader.ui.widget.text.AccentTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="6dp"
                android:text="@string/view"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/rg_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/layout_list"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/layout_grid"
                    tools:ignore="TouchTargetSizeCheck" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_sort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@+id/ll_layout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sw_show_bookshelf_fast_scroller">

            <com.qreader.reader.ui.widget.text.AccentTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="6dp"
                android:text="@string/sort"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/rg_sort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bookshelf_px_0"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bookshelf_px_1"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bookshelf_px_2"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bookshelf_px_3"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bookshelf_px_4"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bookshelf_px_5"
                    tools:ignore="TouchTargetSizeCheck" />

            </RadioGroup>

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>