<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_card_view"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_menu"
            android:elevation="5dp"
            android:theme="?attr/actionBarStyle"
            app:displayHomeAsUp="false"
            app:fitStatusBar="false"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/txt_toc_rule"
            app:titleTextAppearance="@style/ToolbarTitle" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:overScrollMode="ifContentScrolls">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.qreader.reader.ui.widget.text.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name">

                    <com.qreader.reader.lib.theme.view.ThemeEditText
                        android:id="@+id/tv_rule_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                </com.qreader.reader.ui.widget.text.TextInputLayout>

                <com.qreader.reader.ui.widget.text.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/regex">

                    <com.qreader.reader.lib.theme.view.ThemeEditText
                        android:id="@+id/tv_rule_regex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                </com.qreader.reader.ui.widget.text.TextInputLayout>

                <com.qreader.reader.ui.widget.text.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/replace_to_js">

                    <com.qreader.reader.ui.widget.code.CodeView
                        android:id="@+id/tv_rule_replacement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                </com.qreader.reader.ui.widget.text.TextInputLayout>

                <com.qreader.reader.ui.widget.text.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/example">

                    <com.qreader.reader.lib.theme.view.ThemeEditText
                        android:id="@+id/tv_rule_example"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                </com.qreader.reader.ui.widget.text.TextInputLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</FrameLayout>